# mp3DurationDetector

./: .gitignore  CMakeLists.txt  README.md  mp3_lib.cpp  mp3_lib.h
TestCppApp/: CMakeLists.txt
TestCppApp/src/: main.cpp
mp3DurationDetectorRs/: Cargo.toml
mp3DurationDetectorRs/src/: lib.rs
test_audio/: README.md
